extract name change, medical, gender evidence content

--- a/grc/templates/document-checker/your-documents.html
+++ b/grc/templates/document-checker/your-documents.html
@@ -35,13 +35,13 @@
                 <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                            {{ ('Copies of all change of name documents') }}
+                            {{ _('Copies of all change of name documents') }}
                         </span>
                     </summary>
                     <div class="govuk-details__text">
-                        {{ ('If you’ve changed your name to reflect your affirmed gender, upload copies of all documents that show when you’ve done this') }}.
-                        {{ ('This includes enrolled or unenrolled deed polls and statutory declarations of name changes') }}.
-                        {{ ('These copies do not need to be certified') }}.
+                        {{ _('If you’ve changed your name to reflect your affirmed gender, upload copies of all documents that show when you’ve done this') }}.
+                        {{ _('This includes enrolled or unenrolled deed polls and statutory declarations of name changes') }}.
+                        {{ _('These copies do not need to be certified') }}.
                     </div>
                 </details>
             {% endif %}
@@ -51,74 +51,73 @@
                 <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                            {{ ('Medical reports') }}
+                            {{ _('Medical reports') }}
                         </span>
                     </summary>
                     <div class="govuk-details__text">
                         <p class="govuk-body">
-                            {{ ('You need 2 reports written by either') }}:
+                            {{ _('You need 2 reports written by either') }}:
                         </p>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>{{ ('2 different medical doctors registered in the UK') }}</li>
-                            <li>{{ ('a medical doctor and a clinical psychologist, both registered in the UK') }}</li>
+                            <li>{{ _('2 different medical doctors registered in the UK') }}</li>
+                            <li>{{ _('a medical doctor and a clinical psychologist, both registered in the UK') }}</li>
                         </ul>
                         <p class="govuk-body">
-                            {{ ('Neither of the reports can be written by a nurse practitioner') }}.
+                            {{ _('Neither of the reports can be written by a nurse practitioner') }}.
                         </p>
                         <p class="govuk-body">
-                            {{ ('The reports both need to include the name, practice address and contact details of the person who wrote the report') }}.
+                            {{ _('The reports both need to include the name, practice address and contact details of the person who wrote the report') }}.
                         </p>
                         <p class="govuk-body govuk-!-margin-bottom-2">
-                            {{ ('At least 1 of the 2 reports needs to include details of any gender affirmation treatment you’ve had or plan to have, including') }}:
+                            {{ _('At least 1 of the 2 reports needs to include details of any gender affirmation treatment you’ve had or plan to have, including') }}:
                         </p>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>{{ ('any surgical treatments') }}</li>
-                            <li>{{ ('any non-surgical treatments, such as hormone therapy') }}</li>
-                            <li>{{ ('if you’ve not had any treatment and do not plan to have any, why that’s the case') }}</li>
+                            <li>{{ _('any surgical treatments') }}</li>
+                            <li>{{ _('any non-surgical treatments, such as hormone therapy') }}</li>
+                            <li>{{ _('if you’ve not had any treatment and do not plan to have any, why that’s the case') }}</li>
                         </ul>
                         <p class="govuk-body govuk-!-margin-bottom-2">
-                            {{ ('The first report needs to confirm your gender dysphoria diagnosis and the clinical history this was based on, including') }}:
+                            {{ _('The first report needs to confirm your gender dysphoria diagnosis and the clinical history this was based on, including') }}:
                         </p>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>{{ ('who made the diagnosis') }}</li>
-                            <li>{{ ('when the diagnosis was made') }}</li>
-                            <li>{{ ('what evidence was used to make the diagnosis') }}</li>
+                            <li>{{ _('who made the diagnosis') }}</li>
+                            <li>{{ _('when the diagnosis was made') }}</li>
+                            <li>{{ _('what evidence was used to make the diagnosis') }}</li>
                         </ul>
                         <p class="govuk-body">
-                            {{ ('This first report needs to be written by a registered doctor or clinical psychologist who practises in the field of gender dysphoria. You can find one of these by') }}:
+                            {{ _('This first report needs to be written by a registered doctor or clinical psychologist who practises in the field of gender dysphoria. You can find one of these by') }}:
                         </p>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>{{ ('asking your GP for a referral') }}</li>
+                            <li>{{ _('asking your GP for a referral') }}</li>
                             <li>
-                                {{ ('contacting someone on the') }}
+                                {{ _('contacting someone on the') }}
                                 <a href="https://www.gov.uk/government/publications/gender-recognition-certificate-list-of-medical-practitioners-in-gender-dysphoria"
                                     target="_blank" class="govuk-link">
-                                    {{ ('list of specialists in gender dysphoria (opens in a new tab)') }}
-                                </a>
-                                {{ ('- this is not a complete list and it’s not always up-to-date') }}
+                                    {{ _('list of specialists in gender dysphoria (opens in a new tab)') }}
+                                </a> -
+                                {{ _('this is not a complete list and it’s not always up-to-date') }}
                             </li>
                         </ul>
                         <p class="govuk-body">
-                            {{ ('If your registered doctor or clinical psychologist is not on the list of specialists, ask them to include a brief summary of their experience of practising in the field of gender dysphoria') }}.
+                            {{ _('If your registered doctor or clinical psychologist is not on the list of specialists, ask them to include a brief summary of their experience of practising in the field of gender dysphoria') }}.
                         </p>
                         <p class="govuk-body">
-                            {{ ('The second report can be written by any registered doctor or clinical psychologist, including your GP, a surgeon or an endocrinologist') }}.
+                            {{ _('The second report can be written by any registered doctor or clinical psychologist, including your GP, a surgeon or an endocrinologist') }}.
                         </p>
                         <p class="govuk-body">
-                            {{ ('There’s no required content for this second report, and it can include the same information from the first report') }}.
+                            {{ _('There’s no required content for this second report, and it can include the same information from the first report') }}.
                         </p>
                         <p class="govuk-body">
-                            {{ ('The reports do not need to be specially written for your application, so long as they meet all the requirements') }}.
-                            {{ ('You may already have suitable reports in your medical records') }}.
+                            {{ _('The reports do not need to be specially written for your application, so long as they meet all the requirements') }}.
+                            {{ _('You may already have suitable reports in your medical records') }}.
                         </p>
                         <p class="govuk-body">
-                            {{ ('If you do need new reports written, you’ll probably need to pay for them even if you use NHS medical practitioners') }}.
+                            {{ _('If you do need new reports written, you’ll probably need to pay for them even if you use NHS medical practitioners') }}.
                         </p>
                         <p class="govuk-body">
-                            {{ ('There is a') }}
-                            <a href="https://www.gov.uk/government/publications/gender-recognition-certificate-writing-medical-reports"
-                               target="_blank" class="govuk-link">
-                                {{ ('form that medical practitioners can use to write either of these reports (opens in a new tab)') }}
+                            {{ _('There is a') }}
+                            <a href="https://www.gov.uk/government/publications/gender-recognition-certificate-writing-medical-reports" target="_blank" class="govuk-link">
+                            {{ _('form that medical practitioners can use to write either of these reports (opens in a new tab)') }}
                             </a>.
                         </p>
                     </div>
@@ -130,53 +129,53 @@
                 <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                            Evidence of living in your affirmed gender for 2 years
+                            {{ _('Evidence of living in your affirmed gender for 2 years') }}
                         </span>
                     </summary>
                     <div class="govuk-details__text">
                         <p class="govuk-body">
-                            You need copies of evidence to show that you’ve been living in your affirmed gender for the last 2 years.
+                            {{ _('You need copies of evidence to show that you’ve been living in your affirmed gender for the last 2 years') }}.
                         </p>
                         <p class="govuk-body">
-                            Each piece of evidence should contain at least one of the following that matches up with your affirmed gender:
+                            {{ _('Each piece of evidence should contain at least one of the following that matches up with your affirmed gender') }}:
                         </p>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>a name</li>
-                            <li>a title, like 'Mr' or 'Miss'</li>
-                            <li>a gender marker, like 'male' or 'female'</li>
+                            <li>{{ _('a name') }}</li>
+                            <li>{{ _("a title, like 'Mr' or 'Miss'") }}</li>
+                            <li>{{ _("a gender marker, like 'male' or 'female'") }}</li>
                         </ul>
                         <p class="govuk-body govuk-!-margin-bottom-2">
-                            There are no other specific requirements for this evidence, but try to find:
+                            {{ _('There are no other specific requirements for this evidence, but try to find') }}:
                         </p>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>evidence from different points over the 2 years, with roughly 4 pieces of evidence from each year</li>
-                            <li>at least one piece of evidence from the last 2 or 3 months</li>
-                            <li>evidence from a variety of different sources</li>
+                            <li>{{ _('evidence from different points over the 2 years, with roughly 4 pieces of evidence from each year') }}</li>
+                            <li>{{ _('at least one piece of evidence from the last 2 or 3 months') }}</li>
+                            <li>{{ _('evidence from a variety of different sources') }}</li>
                         </ul>
                         <p class="govuk-body govuk-!-margin-bottom-2">
-                            The evidence can come from before you were diagnosed with gender dysphoria.
+                            {{ _('The evidence can come from before you were diagnosed with gender dysphoria') }}.
                         </p>
                         <p class="govuk-body govuk-!-margin-bottom-2">
-                            Examples of what you can upload include good quality photocopies or photographs of:
+                            {{ _('Examples of what you can upload include good quality photocopies or photographs of') }}:
                         </p>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>your driving licence</li>
-                            <li>your passport</li>
-                            <li>identity cards, like workplace IDs, student IDs, railcards, health insurance cards, library cards or supermarket loyalty cards</li>
-                            <li>letters from solicitors, accountants, doctors, dentists or employers</li>
-                            <li>bank statements</li>
-                            <li>payslips, P60s and P45s</li>
-                            <li>benefit letters</li>
-                            <li>tax letters and documents, including council tax</li>
-                            <li>credit reports</li>
-                            <li>confirmation letters that you’re on the electoral register</li>
-                            <li>student loan statements</li>
-                            <li>utility bills, such as internet bills</li>
-                            <li>rental agreements</li>
-                            <li>academic certificates and documents</li>
+                            <li>{{ _('your driving licence') }}</li>
+                            <li>{{ _('your passport') }}</li>
+                            <li>{{ _('identity cards, like workplace IDs, student IDs, railcards, health insurance cards, library cards or supermarket loyalty cards') }}</li>
+                            <li>{{ _('letters from solicitors, accountants, doctors, dentists or employers') }}</li>
+                            <li>{{ _('bank statements') }}</li>
+                            <li>{{ _('payslips, P60s and P45s') }}</li>
+                            <li>{{ _('benefit letters') }}</li>
+                            <li>{{ _('tax letters and documents, including council tax') }}</li>
+                            <li>{{ _('credit reports') }}</li>
+                            <li>{{ _('confirmation letters that you’re on the electoral register') }}</li>
+                            <li>{{ _('student loan statements') }}</li>
+                            <li>{{ _('utility bills, such as internet bills') }}</li>
+                            <li>{{ _('rental agreements') }}</li>
+                            <li>{{ _('academic certificates and documents') }}</li>
                         </ul>
                         <p class="govuk-body">
-                            You might be asked to send in more evidence after you submit your application.
+                            {{ _('You might be asked to send in more evidence after you submit your application') }}.
                         </p>
                     </div>
                 </details>
